Add generic syntaxhighlighting to textEditor using Kate syntaxhighlighter lib Made debugger generic, make it possible to build another debugger (PathSimulator?) Begin refactoring EditorView code, more to come...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ if(NOT FREECAD_LIBPACK_USE OR FREECAD_LIBPACK_CHECKFILE_CLBUNDLER)
         SetupSpaceball()
         SetupShibokenAndPyside()
         SetupMatplotlib()
+        SetupKF5SyntaxHighlighting()
     endif(BUILD_GUI)
 endif(NOT FREECAD_LIBPACK_USE OR FREECAD_LIBPACK_CHECKFILE_CLBUNDLER)
 
